Fix index columns

--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -1,3 +1,56 @@
+// Columns
+
+.bd-columns-header
+  margin-bottom: 3rem
+  text-align: center
+  strong
+    color: $primary
+    font-weight: $weight-semibold
+  .subtitle
+    color: $grey-light
+
+#grid
+  .notification
+    padding-left: 0
+    padding-right: 0
+
+.bd-columns-tools
+  margin-top: 3rem
+
+.bd-columns-tool
+  @extend %center
+  &.bd-is-try
+    .buttons
+      justify-content: center
+    .button
+      strong
+        font-weight: $weight-semibold
+
+#markup
+  width: 100%
+  .highlight pre
+    max-height: none
+
+#message
+  display: none
+  margin-top: 3rem
+
++mobile
+  .bd-columns-tool
+    &.bd-is-markup
+      margin-top: 3rem
+
++tablet
+  .bd-columns-tools
+    align-items: flex-start
+    display: flex
+  .bd-columns-tool
+    width: 50%
+    &.bd-is-try
+      padding-top: 60px
+
+// Focus
+
 .bd-focus
   margin: 6rem auto 0
   max-width: $intro-width
@@ -26,6 +79,8 @@
     color: $blue
   .fa-github-alt
     color: $github
+
+// Intro
 
 .intro-content
   margin-left: auto
@@ -210,15 +265,3 @@
     margin-top: -11px
     &:not(:last-child)
       margin-bottom: 20px
-
-#grid
-  .notification
-    padding-left: 0
-    padding-right: 0
-
-#message
-  display: none
-
-#markup
-  .highlight pre
-    max-height: none
