--- a/docs/_sass/route.sass
+++ b/docs/_sass/route.sass
@@ -1,11 +1,12 @@
 html.route-index
-  .title.is-2
+  .title.is-2,
+  .title.is-3
     position: relative
-  .title.is-2 a
-    color: $text-strong
-    position: relative
-  .title.is-2 a:hover
-    color: $blue
+    a
+      color: $text-strong
+      position: relative
+    a:hover
+      color: $blue
   .hero .title.is-2 a
     color: $white
   .hero .title.is-2 a:hover
