--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -13,12 +13,11 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-between
-  margin-bottom: -1rem
   a
     align-items: center
     display: flex
     justify-content: center
-    margin: 0 1rem 1rem 0
+    margin-right: 1rem
     min-height: $carbon-height
 
 .bd-partners
