--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -17,6 +17,11 @@ $carbon-height: 100px
 $main-spacing: 3rem
 $intro-width: 1130px
 
+%center
+  align-items: center
+  display: flex
+  justify-content: center
+
 =selection($current-selector: false)
   @if $current-selector
     &::-moz-selection
