--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+.bd-columns-tool {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 /*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -10089,6 +10095,69 @@ svg {
   text-decoration: underline;
 }
 
+.bd-columns-header {
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.bd-columns-header strong {
+  color: #00d1b2;
+  font-weight: 600;
+}
+
+.bd-columns-header .subtitle {
+  color: #b5b5b5;
+}
+
+#grid .notification {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.bd-columns-tools {
+  margin-top: 3rem;
+}
+
+.bd-columns-tool.bd-is-try .buttons {
+  justify-content: center;
+}
+
+.bd-columns-tool.bd-is-try .button strong {
+  font-weight: 600;
+}
+
+#markup {
+  width: 100%;
+}
+
+#markup .highlight pre {
+  max-height: none;
+}
+
+#message {
+  display: none;
+  margin-top: 3rem;
+}
+
+@media screen and (max-width: 768px) {
+  .bd-columns-tool.bd-is-markup {
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-columns-tools {
+    align-items: flex-start;
+    display: flex;
+  }
+  .bd-columns-tool {
+    width: 50%;
+  }
+  .bd-columns-tool.bd-is-try {
+    padding-top: 60px;
+  }
+}
+
 .bd-focus {
   margin: 6rem auto 0;
   max-width: 1130px;
@@ -10374,19 +10443,6 @@ svg {
   .intro-title:not(:last-child) {
     margin-bottom: 20px;
   }
-}
-
-#grid .notification {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-#message {
-  display: none;
-}
-
-#markup .highlight pre {
-  max-height: none;
 }
 
 #github {
@@ -11390,16 +11446,19 @@ svg {
   }
 }
 
-html.route-index .title.is-2 {
+html.route-index .title.is-2,
+html.route-index .title.is-3 {
   position: relative;
 }
 
-html.route-index .title.is-2 a {
+html.route-index .title.is-2 a,
+html.route-index .title.is-3 a {
   color: #363636;
   position: relative;
 }
 
-html.route-index .title.is-2 a:hover {
+html.route-index .title.is-2 a:hover,
+html.route-index .title.is-3 a:hover {
   color: #3273dc;
 }
 
@@ -12161,14 +12220,13 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: -1rem;
 }
 
 .bd-partner-sponsors a {
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 0 1rem 1rem 0;
+  margin-right: 1rem;
   min-height: 100px;
 }
 
