--- a/docs/_includes/elements/tws.html
+++ b/docs/_includes/elements/tws.html
@@ -24,7 +24,7 @@
 
   <div class="bd-more-loves">
     <p class="bd-more-loves-container">
-      <a class="button is-medium is-danger bd-rainbow" href="{{ site.url }}/love/">
+      <a class="button is-medium is-danger bd-rainbow" href="{{ love_url }}">
         <span>See more <strong>love</strong> 🤗</span>
       </a>
     </p>
