--- a/docs/_includes/index/columns.html
+++ b/docs/_includes/index/columns.html
@@ -12,7 +12,7 @@
 
 <section class="bd-columns section is-medium">
   <div class="container">
-    <header class="bd-columns-header">
+    <header class="bd-index-header">
       <h3 class="title is-3">
         <a href="{{ site.url }}{{ columns_link.path }}">
           The <strong>simplest</strong> grid system
