--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -1,4 +1,4 @@
-{% assign modifiers_link = site.data.links.by_id['modifiers-syntax'] %}
+{% assign customize_link = site.data.links.by_id['overview-customize'] %}
 
 <section class="bd-easy section is-medium">
   <div class="container">
@@ -6,19 +6,14 @@
       <div class="column">
         <header class="bd-index-header bd-is-left">
           <h3 class="title is-3">
-            <a href="{{ site.url }}{{ modifiers_link.path }}">
-              So <strong>easy</strong> to learn
+            <a href="{{ site.url }}{{ customize_link.path }}">
+              So <strong>quick</strong> to customize
             </a>
           </h3>
           <h4 class="subtitle is-4">
-            Get a design started within minutes
+            Simply set your own Sass variables before importing Bulma
           </h4>
         </header>
-
-        <div class="bd-easy-tweet">
-          {% assign tweet = site.data.love.tweetsById.868829487072464897 %}
-          {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
-        </div>
       </div>
 
       <div class="column">
