--- a/docs/_includes/index/fullheight.html
+++ b/docs/_includes/index/fullheight.html
@@ -13,7 +13,7 @@
     <div class="container has-text-centered">
       <h3 class="title is-2">
         <span class="icon is-medium">
-          <i class="fas fa-arrows-v"></i>
+          <i class="fas fa-arrows-alt-v"></i>
         </span>
         <a href="{{ site.url }}/documentation/layout/hero/">
           Easy <strong>vertical centering</strong> in <strong>fullscreen</strong>
