--- a/docs/_includes/index/start.html
+++ b/docs/_includes/index/start.html
@@ -1,12 +1,22 @@
-<section class="section is-medium">
+{% assign docs_link = site.data.links.by_id['documentation'] %}
+{% assign docs_url = site.url | append: docs_link.path %}
+
+<section class="section is-large">
   <div class="container">
-    <p class="title has-text-centered">Get started</p>
+    <header class="bd-index-header">
+      <h3 class="title is-3">
+        <a href="{{ docs_url }}">
+          Get started
+        </a>
+      </h3>
+    </header>
+
     <div class="hero-buttons">
-      <a class="button is-link is-large" href="{{ site.data.meta.documentation }}">
+      <a class="button is-link is-large" href="{{ docs_url }}">
         <span class="icon">
           <i class="fas fa-book"></i>
         </span>
-        <span>Check the <strong>docs</strong></span>
+        <span>Read the <strong>docs</strong></span>
       </a>
       <a class="button is-black is-large" href="{{ site.data.meta.github }}">
         <span class="icon">
