--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -1,13 +1,27 @@
-// Columns
+// Index common
 
-.bd-columns-header
+.bd-index-header
   margin-bottom: 3rem
   text-align: center
+  a
+    color: currentColor
+    &:hover
+      color: $blue
+      strong
+        color: currentColor
   strong
-    color: $primary
     font-weight: $weight-semibold
+  .title
+    strong
+      color: $primary
   .subtitle
     color: $grey-light
+    strong
+      color: currentColor
+  &.bd-is-left
+    text-align: left
+
+// Columns
 
 #grid
   .notification
