--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -46,7 +46,7 @@ $intro-width: 1130px
 @import "./_sass/example"
 @import "./_sass/callout"
 @import "./_sass/bsa"
-@import "./_sass/route"
+// @import "./_sass/route"
 @import "./_sass/twitter"
 @import "./_sass/expo"
 @import "./_sass/love"
