--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10095,18 +10095,41 @@ svg {
   text-decoration: underline;
 }
 
-.bd-columns-header {
+.bd-index-header {
   margin-bottom: 3rem;
   text-align: center;
 }
 
-.bd-columns-header strong {
-  color: #00d1b2;
+.bd-index-header a {
+  color: currentColor;
+}
+
+.bd-index-header a:hover {
+  color: #3273dc;
+}
+
+.bd-index-header a:hover strong {
+  color: currentColor;
+}
+
+.bd-index-header strong {
   font-weight: 600;
 }
 
-.bd-columns-header .subtitle {
+.bd-index-header .title strong {
+  color: #00d1b2;
+}
+
+.bd-index-header .subtitle {
   color: #b5b5b5;
+}
+
+.bd-index-header .subtitle strong {
+  color: currentColor;
+}
+
+.bd-index-header.bd-is-left {
+  text-align: left;
 }
 
 #grid .notification {
@@ -11446,62 +11469,25 @@ svg {
   }
 }
 
-html.route-index .title.is-2,
-html.route-index .title.is-3 {
-  position: relative;
-}
-
-html.route-index .title.is-2 a,
-html.route-index .title.is-3 a {
-  color: #363636;
-  position: relative;
-}
-
-html.route-index .title.is-2 a:hover,
-html.route-index .title.is-3 a:hover {
-  color: #3273dc;
-}
-
-html.route-index .hero .title.is-2 a {
-  color: white;
-}
-
-html.route-index .hero .title.is-2 a:hover {
-  color: white;
-}
-
-html.route-index .hero.is-primary a.column,
-html.route-index .hero.is-primary a.column:hover {
-  color: white;
-}
-
-html.route-index .hero.is-primary a.column:hover .title strong {
-  border-bottom: 1px solid;
-}
-
-@media screen and (max-width: 979px) {
-  html.route-index .title.is-2 a {
-    padding-left: 0;
-  }
-}
-
 .bd-tws-home {
-  background-color: whitesmoke;
-  display: flex;
-  flex-wrap: wrap;
-  overflow: auto;
-  padding: 20px;
+  background-color: #fafafa;
 }
 
 .bd-tw {
   background-color: #fff;
-  border: 2px solid #e1e8ed;
+  border: 2px solid whitesmoke;
   border-radius: 6px;
   color: #697882;
   flex-shrink: 0;
   font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif;
   font-size: 16px;
+  max-width: 420px;
   padding: 20px;
+}
+
+.bd-tw.bd-is-grey {
+  background-color: #fafafa;
+  border: none;
 }
 
 .bd-tw-header {
