Add index customized

--- a/docs/_includes/index/fullheight.html
+++ b/docs/_includes/index/fullheight.html
@@ -1,4 +1,6 @@
-<section class="hero is-fullheight is-primary">
+{% assign hero_link = site.data.links.by_id['layout-hero'] %}
+
+<section class="bd-index-fullscreen hero is-fullheight is-light">
   <div class="hero-head">
     <div class="container">
       <div class="tabs is-centered">
@@ -10,16 +12,17 @@
   </div>
 
   <div class="hero-body">
-    <div class="container has-text-centered">
-      <h3 class="title is-2">
-        <span class="icon is-medium">
-          <i class="fas fa-arrows-alt-v"></i>
-        </span>
-        <a href="{{ site.url }}/documentation/layout/hero/">
-          Easy <strong>vertical centering</strong> in <strong>fullscreen</strong>
-        </a>
-      </h3>
-      <h4 class="subtitle is-4">Include any content you want, it's always centered</h4>
+    <div class="container">
+      <header class="bd-index-header">
+        <h3 class="title is-3">
+          <a href="{{ site.url }}{{ hero_link.path }}">
+            <strong>Fullscreen</strong> vertical centering
+          </a>
+        </h3>
+        <h4 class="subtitle is-4">
+          Include any content you want, it's always centered
+        </h4>
+      </header>
     </div>
   </div>
 
