--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10121,7 +10121,7 @@ svg {
 }
 
 .bd-index-header .subtitle {
-  color: #b5b5b5;
+  color: #b5b5b5 !important;
 }
 
 .bd-index-header .subtitle strong {
@@ -10130,6 +10130,90 @@ svg {
 
 .bd-index-header.bd-is-left {
   text-align: left;
+}
+
+.bd-index-custom-title {
+  color: #b5b5b5;
+}
+
+.bd-index-custom-example {
+  padding: 1rem;
+}
+
+.bd-index-custom-example .subtitle {
+  margin-bottom: 0.5rem;
+}
+
+.bd-index-custom.bd-is-after {
+  color: #757763;
+  font-family: "Nunito", serif;
+  margin-top: 0.5rem;
+}
+
+.bd-index-custom.bd-is-after a {
+  color: #FA7C91;
+}
+
+.bd-index-custom.bd-is-after a:hover {
+  color: #363636;
+}
+
+.bd-index-custom.bd-is-after .subtitle {
+  color: #757763;
+}
+
+.bd-index-custom.bd-is-after .input,
+.bd-index-custom.bd-is-after .select select {
+  background-color: #EFF0EB;
+  border-color: transparent;
+  border-width: 2px;
+  box-shadow: none;
+  font-family: "Nunito", serif;
+}
+
+.bd-index-custom.bd-is-after .input:hover,
+.bd-index-custom.bd-is-after .select select:hover {
+  border-color: #D0D1CD;
+}
+
+.bd-index-custom.bd-is-after .input:focus,
+.bd-index-custom.bd-is-after .select select:focus {
+  border-color: #FA7C91;
+  box-shadow: 0 0 0 0.125em rgba(250, 124, 145, 0.25);
+}
+
+.bd-index-custom.bd-is-after .select:not(.is-multiple):not(:hover)::after {
+  border-color: #FA7C91;
+}
+
+.bd-index-custom.bd-is-after .button.is-primary {
+  background-color: #8A4D76;
+  color: white;
+}
+
+.bd-index-custom.bd-is-after .button.is-primary:hover {
+  background-color: #82486f;
+}
+
+.bd-index-custom.bd-is-after .button.is-primary:active {
+  background-color: #7a4468;
+}
+
+.bd-index-custom.bd-is-after .button.is-link {
+  background-color: #FA7C91;
+  color: white;
+}
+
+.bd-index-custom.bd-is-after .button.is-link:hover {
+  background-color: #fa7087;
+}
+
+.bd-index-custom.bd-is-after .button.is-link:active {
+  background-color: #f9637c;
+}
+
+.bd-index-fullscreen .tabs a {
+  color: #b5b5b5 !important;
 }
 
 #grid .notification {
