--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -2,52 +2,83 @@
 
 <section class="bd-easy section is-medium">
   <div class="container">
-    <div class="columns is-vcentered">
-      <div class="column">
-        <header class="bd-index-header bd-is-left">
-          <h3 class="title is-3">
-            <a href="{{ site.url }}{{ customize_link.path }}">
-              So <strong>quick</strong> to customize
-            </a>
-          </h3>
-          <h4 class="subtitle is-4">
-            Simply set your own Sass variables before importing Bulma
-          </h4>
-        </header>
+    <header class="bd-index-header">
+      <h3 class="title is-3">
+        <a href="{{ site.url }}{{ customize_link.path }}">
+          So <strong>quick</strong> to customize
+        </a>
+      </h3>
+      <h4 class="subtitle is-4">
+        Simply set your own Sass variables before importing Bulma
+      </h4>
+    </header>
+
+    <div class="columns">
+      <div class="column is-6">
+        <div class="highlight-full">
+          {% highlight scss %}{% include snippets/customized.html %}{% endhighlight %}
+        </div>
       </div>
 
-      <div class="column">
-        <div class="block">
-          <div class="field">
-            <p class="control">
-              <code>button</code>
+      <div class="column is-6">
+        <div class="bd-index-custom bd-is-before">
+          <p class="bd-index-custom-title">Before</p>
+          <div class="bd-index-custom-example">
+            <h1 class="title">
+              Bulma
+            </h1>
+            <p class="subtitle">
+              Modern CSS framework based on <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
             </p>
+            <div class="field">
+              <div class="control">
+                <input class="input" type="text" placeholder="Input">
+              </div>
+            </div>
+            <div class="field">
+              <p class="control">
+                <span class="select">
+                  <select>
+                    <option>Select dropdown</option>
+                  </select>
+                </span>
+              </p>
+            </div>
+            <div class="buttons">
+              <a class="button is-primary">Primary</a>
+              <a class="button is-link">Link</a>
+            </div>
           </div>
-          <a class="button">Button</a>
         </div>
-        <div class="block">
-          <div class="field">
-            <p class="control">
-              <code>button is-primary</code>
+
+        <div class="bd-index-custom bd-is-after">
+          <p class="bd-index-custom-title">After</p>
+          <div class="bd-index-custom-example">
+            <h1 class="title">
+              Bulma
+            </h1>
+            <p class="subtitle">
+              Modern CSS framework based on <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
             </p>
+            <div class="field">
+              <div class="control">
+                <input class="input" type="text" placeholder="Input">
+              </div>
+            </div>
+            <div class="field">
+              <p class="control">
+                <span class="select">
+                  <select>
+                    <option>Select dropdown</option>
+                  </select>
+                </span>
+              </p>
+            </div>
+            <div class="buttons">
+              <a class="button is-primary">Primary</a>
+              <a class="button is-link">Link</a>
+            </div>
           </div>
-          <a class="button is-primary">Button</a>
-        </div>
-        <div class="block">
-          <div class="field">
-            <p class="control">
-              <code>button is-primary is-large</code>
-            </p>
-          </div>
-          <a class="button is-primary is-large">Button</a>
-        </div>
-        <div class="block">
-          <div class="field">
-            <p class="control">
-              <code>button is-primary is-large is-loading</code>
-            </p>
-          </div>
-          <a class="button is-primary is-large is-loading">Button</a>
         </div>
       </div>
     </div>
