--- a/docs/_includes/index/focus.html
+++ b/docs/_includes/index/focus.html
@@ -1,6 +1,10 @@
+{% assign responsiveness_link = site.data.links.by_id['overview-responsiveness'] %}
+{% assign modularity_link = site.data.links.by_id['overview-modular'] %}
+{% assign columns_link = site.data.links.by_id['columns-basics'] %}
+
 <div class="bd-focus">
   <nav class="columns">
-    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}/documentation/overview/responsiveness/">
+    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}{{ responsiveness_link.path }}">
       <p class="title is-4">
         <strong>100% Responsive</strong>
       </p>
@@ -18,7 +22,7 @@
       </figure>
     </a>
 
-    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}/documentation/overview/modular/">
+    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}{{ modularity_link.path }}">
       <p class="title is-4">
         <strong>Modular</strong>
       </p>
@@ -32,7 +36,7 @@
       </figure>
     </a>
 
-    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}/documentation/columns/basics/">
+    <a class="bd-focus-item column has-text-centered" href="{{ site.url }}{{ columns_link.path }}">
       <p class="title is-4">
         <strong>Modern</strong>
       </p>
@@ -46,7 +50,7 @@
       </figure>
     </a>
 
-    <a class="bd-focus-item column has-text-centered" href="{{ site.data.meta.github }}">
+    <a class="bd-focus-item column has-text-centered" href="{{ site.data.meta.github }}" target="_blank">
       <p class="title is-4">
         <strong>Free</strong>
       </p>
