--- a/docs/_includes/index/start.html
+++ b/docs/_includes/index/start.html
@@ -18,7 +18,7 @@
         </span>
         <span>Read the <strong>docs</strong></span>
       </a>
-      <a class="button is-black is-large" href="{{ site.data.meta.github }}">
+      <a class="button is-black is-large" href="{{ site.data.meta.github }}" target="_blank">
         <span class="icon">
           <i class="fab fa-github"></i>
         </span>
