--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -11,6 +11,8 @@
   display: block
   font-size: $size-5
   padding: 1rem 3rem 1.5rem
+  transition-duration: $speed
+  transition-property: background-color, color
   strong
     font-weight: $weight-semibold
   &:hover
