--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10096,7 +10096,6 @@ svg {
 }
 
 .bd-index-header {
-  margin-bottom: 3rem;
   text-align: center;
 }
 
@@ -10128,8 +10127,17 @@ svg {
   color: currentColor;
 }
 
+.bd-index-header:not(:last-child) {
+  margin-bottom: 3rem;
+}
+
 .bd-index-header.bd-is-left {
   text-align: left;
+}
+
+.bd-index-js-tweet .bd-tw {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .bd-index-custom-title {
@@ -10212,6 +10220,16 @@ svg {
   background-color: #f9637c;
 }
 
+.bd-index-custom.bd-is-after ::-moz-selection {
+  background-color: #FA7C91;
+  color: white;
+}
+
+.bd-index-custom.bd-is-after ::selection {
+  background-color: #FA7C91;
+  color: white;
+}
+
 .bd-index-fullscreen .tabs a {
   color: #b5b5b5 !important;
 }
@@ -10267,7 +10285,14 @@ svg {
 
 .bd-focus {
   margin: 6rem auto 0;
-  max-width: 1130px;
+  max-width: 1080px;
+}
+
+.bd-focus-item {
+  border-radius: 6px;
+  padding-top: 1.25rem;
+  transition-duration: 172ms;
+  transition-property: background-color;
 }
 
 .bd-focus-item .subtitle {
@@ -10276,6 +10301,19 @@ svg {
 
 .bd-focus-item .subtitle strong {
   color: currentColor;
+}
+
+.bd-focus-item .title {
+  transition-duration: 172ms;
+  transition-property: color;
+}
+
+.bd-focus-item:hover {
+  background-color: #fafafa;
+}
+
+.bd-focus-item:hover .title {
+  color: #3273dc;
 }
 
 .bd-focus-icon .fa-mobile-alt {
@@ -10737,6 +10775,8 @@ svg {
   display: block;
   font-size: 1.25rem;
   padding: 1rem 3rem 1.5rem;
+  transition-duration: 86ms;
+  transition-property: background-color, color;
 }
 
 .bd-link strong {
@@ -12302,10 +12342,6 @@ svg {
 
 .bd-partners {
   background-color: #fafafa;
-}
-
-.bd-partners .container {
-  max-width: 1130px;
 }
 
 .bd-partners #carbonads .carbon-text {
