--- a/docs/_includes/index/start.html
+++ b/docs/_includes/index/start.html
@@ -6,17 +6,17 @@
     <header class="bd-index-header">
       <h3 class="title is-3">
         <a href="{{ docs_url }}">
-          Get started
+          And <strong>much more!</strong>
         </a>
       </h3>
     </header>
 
     <div class="hero-buttons">
-      <a class="button is-link is-large" href="{{ docs_url }}">
+      <a class="button is-primary is-large" href="{{ docs_url }}">
         <span class="icon">
           <i class="fas fa-book"></i>
         </span>
-        <span>Read the <strong>docs</strong></span>
+        <span>Get <strong>started</strong></span>
       </a>
       <a class="button is-black is-large" href="{{ site.data.meta.github }}" target="_blank">
         <span class="icon">
