--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -190,8 +190,10 @@
 
 .intro-ghbtns
   height: 30px
-  // margin-bottom: 24px
-  margin-bottom: 46px
+  margin-bottom: 26px
+  iframe,
+  img
+    height: 30px
 
 .intro-npm
   background: $black-ter
@@ -312,7 +314,7 @@
 .intro-author
   color: $text-light
   font-size: $size-small
-  margin-top: 1rem
+  margin-top: 40px
   text-align: center
   a
     color: $text-strong
