--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10362,7 +10362,12 @@ svg {
 
 .intro-ghbtns {
   height: 30px;
-  margin-bottom: 46px;
+  margin-bottom: 26px;
+}
+
+.intro-ghbtns iframe,
+.intro-ghbtns img {
+  height: 30px;
 }
 
 .intro-npm {
@@ -10517,7 +10522,7 @@ svg {
 .intro-author {
   color: #7a7a7a;
   font-size: 0.75rem;
-  margin-top: 1rem;
+  margin-top: 40px;
   text-align: center;
 }
 
