--- a/docs/_includes/elements/patreon.html
+++ b/docs/_includes/elements/patreon.html
@@ -1,8 +1,3 @@
-<div class="bd-banner is-patreon">
-  <p class="bd-banner-text">
-    <strong>Support Bulma</strong> on Patreon
-  </p>
-  <a class="bd-banner-button" href="https://www.patreon.com/jgthms" target="_blank">
-    <img src="/images/patreon.png" alt="Become a patron">
-  </a>
-</div>
+<a class="bd-patreon-button" href="https://www.patreon.com/jgthms" target="_blank">
+  <img src="{{ site.url }}/images/become-a-patron.png" alt="Become a patron" width="148" height="36">
+</a>
