--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -83,17 +83,7 @@
       <div class="navbar-item">
         <div class="field is-grouped is-grouped-multiline">
           <p class="control">
-            <a href="https://www.patreon.com/jgthms" target="_blank" style="display: block;">
-              <img
-                style="border-radius: 3px; display: block; max-height: 36px;"
-                src="/images/become_a_patron_button.png"
-                width="153"
-                height="36"
-                srcset="/images/become_a_patron_button@3x.png 3x,
-                        /images/become_a_patron_button@2x.png 2x,
-                        /images/become_a_patron_button.png 1x"
-                alt="Become a patron">
-            </a>
+            {% include elements/patreon.html %}
           </p>
           <p class="control">
             <a class="button is-primary" href="{{ site.data.meta.download }}">
