--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -2,6 +2,10 @@ svg
   max-height: 100%
   max-width: 100%
 
+.bd-patreon-button
+  img
+    border-radius: $radius
+
 $carbon-spacing: 1rem
 $carbon-shadow-size: 0.75rem
 $carbon-image-height: 100px
