--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -23,6 +23,8 @@ $carbon-height: 100px
 $main-spacing: 3rem
 $intro-width: 1080px
 
+$navbar-item-img-max-height: none
+
 %center
   align-items: center
   display: flex
