--- a/docs/_includes/global/newsletter.html
+++ b/docs/_includes/global/newsletter.html
@@ -1,31 +1,31 @@
-<section id="newsletter" class="hero is-primary">
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns is-vcentered">
-        <div class="column is-one-third is-left">
-          <p class="title">Bulma <strong>Newsletter</strong></p>
-          <p class="subtitle">Get notified when v1 is ready!</p>
-        </div>
+<section id="newsletter" class="section is-medium">
+  <div class="container">
+    <div class="columns is-vcentered">
+      <div class="column">
+        <p class="title">Newsletter</p>
+        <p class="subtitle is-4 has-text-grey-light">Features, releases, showcase… stay in the loop!</p>
+      </div>
 
-        <div class="column">
-          <form action="https://mail.jgthms.com/subscribe" method="POST" accept-charset="utf-8">
-              <div class="field is-grouped">
-                <div class="control has-icons-left is-expanded">
-                  <input type="email" value="" name="email" class="input is-flat required email" placeholder="email address" required>
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                </div>
-                <div class="control">
-                  <div class="is-hidden">
-                    <input type="text" name="hp" id="hp">
-                  </div>
-                  <input type="hidden" name="list" value="So5UY3O9gHJkq892bn763Tyf4A">
-                  <input type="submit" value="Subscribe" name="submit" id="mc-embedded-subscribe" class="button is-white is-outlined">
-                </div>
+      <div class="column">
+        <form action="https://mail.jgthms.com/subscribe" method="POST" accept-charset="utf-8">
+            <div class="field is-grouped">
+              <div class="control has-icons-left is-expanded">
+                <input type="email" value="" name="email" class="input is-flat required email" placeholder="email address" required>
+                <span class="icon is-small is-left">
+                  <i class="fas fa-envelope"></i>
+                </span>
               </div>
-          </form>
-        </div>
+              <div class="control">
+                <div class="is-hidden">
+                  <input type="text" name="hp" id="hp">
+                </div>
+                <input type="hidden" name="list" value="So5UY3O9gHJkq892bn763Tyf4A">
+                <button class="button is-link">
+                  <strong>Subscribe</strong>
+                </button>
+              </div>
+            </div>
+        </form>
       </div>
     </div>
   </div>
