Add footer links

--- a/docs/_includes/global/footer.html
+++ b/docs/_includes/global/footer.html
@@ -8,15 +8,7 @@
 
 {% include global/newsletter.html %}
 
-<footer class="footer">
-  <div class="container">
-    <div class="columns">
-      <div class="column is-4">
-        {% include footer/about.html %}
-      </div>
-    </div>
-  </div>
-</footer>
+{% include footer/main.html %}
 
 {% include book/book-modal.html %}
 
