--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -17,13 +17,16 @@
 .bd-footer-iframe
   display: flex
   flex-wrap: wrap
+  margin-bottom: -10px
   min-height: 30px
+  iframe
+    margin-bottom: 10px
   .fb-like
     margin-left: 10px
 
 .bd-footer-tsp
   color: $grey-light
-  margin-top: 1.5rem
+  margin-top: 1rem
 
 %bd-footer-box
   background-color: $white
@@ -110,7 +113,6 @@ $star-figure-height: 156px
     background-position: bottom center
     background-size: 440px 180px
 
-
 .bd-footer-star-header
   padding: 1.5rem
 
@@ -118,3 +120,43 @@ $star-figure-height: 156px
   @extend %center
   height: $star-figure-height
   margin-top: -1rem
+
+// Links
+
+.bd-footer-links
+  margin-top: 6rem
+  padding-bottom: 6rem
+  a
+    color: currentColor
+    &:hover
+      color: $link
+
+.bd-footer-link-title
+  color: $text-strong
+  font-size: 1.25rem
+  font-weight: $weight-semibold
+  &:not(:first-child)
+    margin-top: 1.5em
+
+.bd-footer-link
+  margin-top: 0.25rem
+  &.bd-is-more
+    font-size: 0.875rem
+    a:not(:hover)
+      color: $grey-light
+  &.bd-has-subtitle
+    a
+      em
+        display: block
+        font-size: 0.875rem
+        font-style: normal
+      &:not(:hover)
+        em
+          color: $grey-light
+      +tablet
+        align-items: center
+        display: flex
+        justify-content: space-between
+        em
+          margin-left: 1rem
+          text-align: right
