--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10673,7 +10673,12 @@ svg {
 .bd-footer-iframe {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: -10px;
   min-height: 30px;
+}
+
+.bd-footer-iframe iframe {
+  margin-bottom: 10px;
 }
 
 .bd-footer-iframe .fb-like {
@@ -10682,7 +10687,7 @@ svg {
 
 .bd-footer-tsp {
   color: #b5b5b5;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 
 .bd-footer-support, .bd-footer-star {
@@ -10805,6 +10810,63 @@ svg {
 .bd-footer-star-figure {
   height: 156px;
   margin-top: -1rem;
+}
+
+.bd-footer-links {
+  margin-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.bd-footer-links a {
+  color: currentColor;
+}
+
+.bd-footer-links a:hover {
+  color: #3273dc;
+}
+
+.bd-footer-link-title {
+  color: #363636;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.bd-footer-link-title:not(:first-child) {
+  margin-top: 1.5em;
+}
+
+.bd-footer-link {
+  margin-top: 0.25rem;
+}
+
+.bd-footer-link.bd-is-more {
+  font-size: 0.875rem;
+}
+
+.bd-footer-link.bd-is-more a:not(:hover) {
+  color: #b5b5b5;
+}
+
+.bd-footer-link.bd-has-subtitle a em {
+  display: block;
+  font-size: 0.875rem;
+  font-style: normal;
+}
+
+.bd-footer-link.bd-has-subtitle a:not(:hover) em {
+  color: #b5b5b5;
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-footer-link.bd-has-subtitle a {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
+  .bd-footer-link.bd-has-subtitle a em {
+    margin-left: 1rem;
+    text-align: right;
+  }
 }
 
 ::-moz-selection {
