--- a/docs/_includes/footer/boxes.html
+++ b/docs/_includes/footer/boxes.html
@@ -21,7 +21,7 @@
   <a class="bd-footer-star bd-is-expo" href="{{ site.url }}{{ expo_link.path }}">
     <header class="bd-footer-star-header">
       <h4 class="bd-footer-title">
-        <span class="icon bd-has-text-star">
+        <span class="icon has-text-star">
           <i class="fas fa-star"></i>
         </span>
         <strong>Expo</strong>
