--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -93,7 +93,7 @@
 .bd-has-text-rss
   color: $rss
 
-.bd-has-text-star
+.has-text-star
   color: $star
 
 // $navbar-items: ("documentation": $primary, "templates": $info, "videos": $success, "blog": $rss, "expo": $star, "love": $red)
