--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10654,7 +10654,7 @@ svg {
   color: #363636;
   font-size: 1.25rem;
   line-height: 1.25;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   transition-duration: 86ms;
   transition-property: color;
 }
@@ -10665,7 +10665,7 @@ svg {
 
 .bd-footer-subtitle {
   color: #b5b5b5;
-  margin-top: -1rem;
+  margin-top: -0.5rem;
   transition-duration: 86ms;
   transition-property: color;
 }
@@ -10687,7 +10687,7 @@ svg {
 
 .bd-footer-tsp {
   color: #b5b5b5;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
 
 .bd-footer-support, .bd-footer-star {
@@ -10700,13 +10700,16 @@ svg {
 
 .bd-footer-support .bd-footer-title, .bd-footer-star .bd-footer-title {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
 }
 
 .bd-footer-support {
   margin-bottom: 3rem;
-  margin-top: 2.25rem;
-  padding: 2.5rem;
+  margin-top: 3rem;
+  padding: 3rem;
+}
+
+.bd-footer-support .bd-footer-title {
+  margin-bottom: 1.5rem;
 }
 
 .bd-footer-donations {
@@ -10728,7 +10731,7 @@ svg {
 }
 
 .bd-footer-donation-action {
-  min-height: 36px;
+  height: 70px;
 }
 
 .bd-footer-donation-action .paypal-form {
@@ -10836,7 +10839,7 @@ svg {
 }
 
 .bd-footer-link {
-  margin-top: 0.25rem;
+  margin-top: 0.5rem;
 }
 
 .bd-footer-link.bd-is-more {
@@ -10845,6 +10848,18 @@ svg {
 
 .bd-footer-link.bd-is-more a:not(:hover) {
   color: #b5b5b5;
+}
+
+.bd-footer-link.bd-has-subtitle a {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bd-footer-link.bd-has-subtitle a strong {
+  flex-grow: 1;
+  flex-shrink: 1;
+  font-weight: unset;
 }
 
 .bd-footer-link.bd-has-subtitle a em {
@@ -10857,16 +10872,29 @@ svg {
   color: #b5b5b5;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (max-width: 768px) {
   .bd-footer-link.bd-has-subtitle a {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 1rem;
   }
+  .bd-footer-link.bd-has-subtitle a em {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 769px), print {
   .bd-footer-link.bd-has-subtitle a em {
     margin-left: 1rem;
     text-align: right;
   }
+}
+
+.bd-footer-link-icon {
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-right: 0.5em;
+  text-align: center;
+  width: 1em;
 }
 
 ::-moz-selection {
@@ -11011,7 +11039,7 @@ svg {
   color: #f26522;
 }
 
-.bd-has-text-star {
+.has-text-star {
   color: #FFD257;
 }
 
