--- a/docs/_includes/footer/links.html
+++ b/docs/_includes/footer/links.html
@@ -51,20 +51,22 @@
       </p>
 
       {% for link_id in site.data.links.more %}
-          {% assign link = site.data.links.by_id[link_id] %}
+        {% assign link = site.data.links.by_id[link_id] %}
 
         <p class="bd-footer-link bd-has-subtitle">
           <a href="{{ site.url }}{{ link.path }}">
-            <span>
-              {{ link.name }}
+            <span class="bd-footer-link-icon has-text-{{ link.color }}">
+              <i class="{% if link.icon_brand %}fab{% elsif link.icon_regular %}far{% else %}fas{% endif %} fa-{{ link.icon }}"></i>
             </span>
+            <strong>
+              {{ link.name }}
+            </strong>
             <em>
               {{ link.subtitle }}
             </em>
           </a>
         </p>
       {% endfor %}
-
     </div>
   </div>
 </div>
